# RedditCrew

./: Hungry-Move-6603_UserPersona.txt  README.md  kojied_persona.txt  pyproject.toml  report.md  trained_agents_data.pkl  training_data.pkl  u_Hungry-Move-6603_Persona.txt
knowledge/: user_preference.txt
output/: user_persona_Hungry-Move-6603.txt  user_persona_hungry_move.txt  user_persona_kojied.txt
src/redditcrew/: crew.py  main.py
src/redditcrew/config/: agents.yaml  tasks.yaml
src/redditcrew/tools/: reddit_user_scraper_tool.py
