[project]
name = "redditcrew"
version = "0.1.0"
description = "redditcrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
redditcrew = "redditcrew.main:run"
run_crew = "redditcrew.main:run"
train = "redditcrew.main:train"
replay = "redditcrew.main:replay"
test = "redditcrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
